samples/errors/array_out_of_bounds.lox
// arrayGet out of bounds should produce runtime error
var a = newArray();
arrayPush(a, 10);
arrayGet(a, 5); // expect runtime error: Array index 5 out of bounds [0, 0].
